// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SnippetPreview changes the colors of the description if it was generated 1`] = `
.c1 {
  overflow: auto;
  width: 640px;
  padding: 0 20px;
  max-width: 100%;
  box-sizing: border-box;
}

.c2 {
  width: 600px;
}

.c0 {
  background-color: white;
  font-family: arial,sans-serif;
  box-sizing: border-box;
}

.c3 {
  cursor: pointer;
  position: relative;
}

.c5 {
  color: #1e0fbe;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 18px;
  line-height: 1.2;
  font-weight: normal;
  margin: 0;
  display: inline-block;
  overflow: hidden;
  max-width: 600px;
  vertical-align: top;
  text-overflow: ellipsis;
}

.c4 {
  max-width: 600px;
  vertical-align: top;
  text-overflow: ellipsis;
}

.c6 {
  white-space: nowrap;
}

.c7 {
  display: inline-block;
  color: #006621;
  cursor: pointer;
  position: relative;
  max-width: 90%;
  white-space: nowrap;
  font-size: 14px;
}

.c8 {
  display: inline-block;
  color: #006621;
  cursor: pointer;
  position: relative;
  max-width: 90%;
  white-space: nowrap;
  font-size: 14px;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 100%;
}

.c10 {
  color: #545454;
  cursor: pointer;
  position: relative;
  max-width: 600px;
  font-size: 13px;
}

.c9 {
  display: inline-block;
  margin-top: 6px;
  margin-left: 6px;
  border-top: 5px solid #006621;
  border-right: 4px solid transparent;
  border-left: 4px solid transparent;
  vertical-align: top;
}

<section>
  <div
    className="c0 c1"
    width={640}
  >
    <div
      className="c2"
      width={600}
    >
      <div
        className=""
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          SEO title preview:
        </span>
        <div
          className="c3"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          <div
            className="c4 c5"
          >
            <span
              className="c6"
            >
              Title
            </span>
          </div>
        </div>
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Url preview:
        </span>
        <div
          className="c7"
        >
          <div
            className="c8"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          >
            https://example.org/
          </div>
        </div>
        <div
          className="c9"
        />
      </div>
      <div
        className=""
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Meta description preview:
        </span>
        <div
          className="c10"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          Description
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`SnippetPreview highlights keywords even if they are transliterated 1`] = `
.c1 {
  overflow: auto;
  width: 640px;
  padding: 0 20px;
  max-width: 100%;
  box-sizing: border-box;
}

.c2 {
  width: 600px;
}

.c0 {
  background-color: white;
  font-family: arial,sans-serif;
  box-sizing: border-box;
}

.c3 {
  cursor: pointer;
  position: relative;
}

.c5 {
  color: #1e0fbe;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 18px;
  line-height: 1.2;
  font-weight: normal;
  margin: 0;
  display: inline-block;
  overflow: hidden;
  max-width: 600px;
  vertical-align: top;
  text-overflow: ellipsis;
}

.c4 {
  max-width: 600px;
  vertical-align: top;
  text-overflow: ellipsis;
}

.c6 {
  white-space: nowrap;
}

.c7 {
  display: inline-block;
  color: #006621;
  cursor: pointer;
  position: relative;
  max-width: 90%;
  white-space: nowrap;
  font-size: 14px;
}

.c8 {
  display: inline-block;
  color: #006621;
  cursor: pointer;
  position: relative;
  max-width: 90%;
  white-space: nowrap;
  font-size: 14px;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 100%;
}

.c10 {
  color: #545454;
  cursor: pointer;
  position: relative;
  max-width: 600px;
  font-size: 13px;
}

.c9 {
  display: inline-block;
  margin-top: 6px;
  margin-left: 6px;
  border-top: 5px solid #006621;
  border-right: 4px solid transparent;
  border-left: 4px solid transparent;
  vertical-align: top;
}

<section>
  <div
    className="c0 c1"
    width={640}
  >
    <div
      className="c2"
      width={600}
    >
      <div
        className=""
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          SEO title preview:
        </span>
        <div
          className="c3"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          <div
            className="c4 c5"
          >
            <span
              className="c6"
            >
              Title
            </span>
          </div>
        </div>
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Url preview:
        </span>
        <div
          className="c7"
        >
          <div
            className="c8"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          >
            https://example.org/
          </div>
        </div>
        <div
          className="c9"
        />
      </div>
      <div
        className=""
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Meta description preview:
        </span>
        <div
          className="c10"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          Something with a transliterated
          <strong>
             kaayword
          </strong>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`SnippetPreview highlights keywords inside the description and url 1`] = `
.c1 {
  overflow: auto;
  width: 640px;
  padding: 0 20px;
  max-width: 100%;
  box-sizing: border-box;
}

.c2 {
  width: 600px;
}

.c0 {
  background-color: white;
  font-family: arial,sans-serif;
  box-sizing: border-box;
}

.c3 {
  cursor: pointer;
  position: relative;
}

.c5 {
  color: #1e0fbe;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 18px;
  line-height: 1.2;
  font-weight: normal;
  margin: 0;
  display: inline-block;
  overflow: hidden;
  max-width: 600px;
  vertical-align: top;
  text-overflow: ellipsis;
}

.c4 {
  max-width: 600px;
  vertical-align: top;
  text-overflow: ellipsis;
}

.c6 {
  white-space: nowrap;
}

.c7 {
  display: inline-block;
  color: #006621;
  cursor: pointer;
  position: relative;
  max-width: 90%;
  white-space: nowrap;
  font-size: 14px;
}

.c8 {
  display: inline-block;
  color: #006621;
  cursor: pointer;
  position: relative;
  max-width: 90%;
  white-space: nowrap;
  font-size: 14px;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 100%;
}

.c10 {
  color: #545454;
  cursor: pointer;
  position: relative;
  max-width: 600px;
  font-size: 13px;
}

.c9 {
  display: inline-block;
  margin-top: 6px;
  margin-left: 6px;
  border-top: 5px solid #006621;
  border-right: 4px solid transparent;
  border-left: 4px solid transparent;
  vertical-align: top;
}

<section>
  <div
    className="c0 c1"
    width={640}
  >
    <div
      className="c2"
      width={600}
    >
      <div
        className=""
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          SEO title preview:
        </span>
        <div
          className="c3"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          <div
            className="c4 c5"
          >
            <span
              className="c6"
            >
              Title
            </span>
          </div>
        </div>
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Url preview:
        </span>
        <div
          className="c7"
        >
          <div
            className="c8"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          >
            https://example.org/this-keyword-url/
          </div>
        </div>
        <div
          className="c9"
        />
      </div>
      <div
        className=""
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Meta description preview:
        </span>
        <div
          className="c10"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          Something with a
          <strong>
             keyword
          </strong>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`SnippetPreview mobile mode renders an AMP logo when isAmp is true 1`] = `
.c0 {
  border-bottom: 1px hidden #fff;
  border-radius: 2px;
  box-shadow: 0 1px 2px rgba(0,0,0,.2);
  font-family: Arial,Roboto-Regular,HelveticaNeue,sans-serif;
  max-width: 600px;
  box-sizing: border-box;
  font-size: 14px;
}

.c2 {
  cursor: pointer;
  position: relative;
}

.c4 {
  color: #1e0fbe;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 18px;
  line-height: 1.2;
  font-weight: normal;
  margin: 0;
  display: inline-block;
  overflow: hidden;
  max-width: 600px;
  vertical-align: top;
  text-overflow: ellipsis;
}

.c3 {
  max-width: 600px;
  vertical-align: top;
  text-overflow: ellipsis;
}

.c5 {
  display: inline-block;
  font-size: 16px;
  line-height: 1.2em;
  max-height: 2.4em;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c7 {
  display: inline-block;
  color: #006621;
  cursor: pointer;
  position: relative;
  max-width: 90%;
  white-space: nowrap;
  font-size: 14px;
}

.c8 {
  display: inline-block;
  color: #006621;
  cursor: pointer;
  position: relative;
  max-width: 90%;
  white-space: nowrap;
  font-size: 14px;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 100%;
}

.c11 {
  color: #545454;
  cursor: pointer;
  position: relative;
  max-width: 600px;
  font-size: 13px;
}

.c10 {
  font-size: 14px;
  line-height: 20px;
}

.c1 {
  padding: 8px 16px;
}

.c9 {
  border: 0;
  border-bottom: 1px solid #DFE1E5;
  margin: 0;
}

.c6 {
  background-size: 100% 100%;
  display: inline-block;
  height: 12px;
  width: 12px;
  margin-bottom: -1px;
  opacity: 0.46;
  margin-right: 6px;
  background-image: url( data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACQAAAAkCAQAAABLCVATAAABr0lEQVR4AbWWJYCUURhFD04Zi7hrLzgFd4nzV9x6wKHinmYb7g4zq71gIw2LWBnZ3Q8df/fh96Tn/t2HVIw4CVKk+fSFNCkSxInxW1pFkhLmoMRjVvFLmkEX5ocuZuBVPw5jv8hh+iEU5QEmuMK+prz7RN3dPMMEGQYzxpH/lGjzou5jgl7mAvOdZfcbF+jbm3MAbFZ7VX9SJnlL1D8UMyjLe+BrAYDb+jJUr59JrlNWRtcqX9GkrPCR4QBAf4qYJAkQoyQrbKKs8RiaEjEI0GvvQ1mLMC9xaBFFBaZS1TbMSwJSomg39erDF+TxpCCNOXjGQJTCvG6qn4ZPzkcxA61Tjhaf4KMj+6Q3XvW6Lopraa8IozRQxIi0a7NXorULc5JyHX/3F3q+0PsFYytVTaGgjz/AvCyiegE69IUsPxHNBMpa738i6tGWlzkAABjKe/+j9YeRHGVd9oWRnwe2ewDASp/L/UqoPQ5AmFeYZMavBP8dAJz0GWWDHQlzXApMdz4KYUfKICcxkKeOfGmQyrIPcgE9m+g/+kT812/Nr3+0kqzitxQjoKXh6xfor99nlEdFjyvH15gAAAAASUVORK5CYII= );
}

<section>
  <div
    className="c0"
    onMouseLeave={undefined}
    width={640}
  >
    <div
      className="c1"
    >
      <span
        className="screen-reader-text"
        style={
          Object {
            "clip": "rect(1px, 1px, 1px, 1px)",
            "height": "1px",
            "overflow": "hidden",
            "position": "absolute",
            "width": "1px",
          }
        }
      >
        SEO title preview:
      </span>
      <div
        className="c2"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      >
        <div
          className="c3 c4"
        >
          <span
            className="c5"
          >
            Title
          </span>
        </div>
      </div>
      <span
        className="screen-reader-text"
        style={
          Object {
            "clip": "rect(1px, 1px, 1px, 1px)",
            "height": "1px",
            "overflow": "hidden",
            "position": "absolute",
            "width": "1px",
          }
        }
      >
        Url preview:
      </span>
      <div
        className="c6"
      />
      <div
        className="c7"
      >
        <div
          className="c8"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          https://example.org
        </div>
      </div>
    </div>
    <hr
      className="c9"
    />
    <div
      className="c1"
    >
      <span
        className="screen-reader-text"
        style={
          Object {
            "clip": "rect(1px, 1px, 1px, 1px)",
            "height": "1px",
            "overflow": "hidden",
            "position": "absolute",
            "width": "1px",
          }
        }
      >
        Meta description preview:
      </span>
      <div
        className="c10 c11"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      >
        <div
          className="c10 c11"
        >
          Description
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`SnippetPreview mobile mode renders differently than desktop 1`] = `
.c0 {
  border-bottom: 1px hidden #fff;
  border-radius: 2px;
  box-shadow: 0 1px 2px rgba(0,0,0,.2);
  font-family: Arial,Roboto-Regular,HelveticaNeue,sans-serif;
  max-width: 600px;
  box-sizing: border-box;
  font-size: 14px;
}

.c2 {
  cursor: pointer;
  position: relative;
}

.c4 {
  color: #1e0fbe;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 18px;
  line-height: 1.2;
  font-weight: normal;
  margin: 0;
  display: inline-block;
  overflow: hidden;
  max-width: 600px;
  vertical-align: top;
  text-overflow: ellipsis;
}

.c3 {
  max-width: 600px;
  vertical-align: top;
  text-overflow: ellipsis;
}

.c5 {
  display: inline-block;
  font-size: 16px;
  line-height: 1.2em;
  max-height: 2.4em;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c6 {
  display: inline-block;
  color: #006621;
  cursor: pointer;
  position: relative;
  max-width: 90%;
  white-space: nowrap;
  font-size: 14px;
}

.c7 {
  display: inline-block;
  color: #006621;
  cursor: pointer;
  position: relative;
  max-width: 90%;
  white-space: nowrap;
  font-size: 14px;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 100%;
}

.c10 {
  color: #545454;
  cursor: pointer;
  position: relative;
  max-width: 600px;
  font-size: 13px;
}

.c9 {
  font-size: 14px;
  line-height: 20px;
}

.c1 {
  padding: 8px 16px;
}

.c8 {
  border: 0;
  border-bottom: 1px solid #DFE1E5;
  margin: 0;
}

<section>
  <div
    className="c0"
    onMouseLeave={undefined}
    width={640}
  >
    <div
      className="c1"
    >
      <span
        className="screen-reader-text"
        style={
          Object {
            "clip": "rect(1px, 1px, 1px, 1px)",
            "height": "1px",
            "overflow": "hidden",
            "position": "absolute",
            "width": "1px",
          }
        }
      >
        SEO title preview:
      </span>
      <div
        className="c2"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      >
        <div
          className="c3 c4"
        >
          <span
            className="c5"
          >
            Title
          </span>
        </div>
      </div>
      <span
        className="screen-reader-text"
        style={
          Object {
            "clip": "rect(1px, 1px, 1px, 1px)",
            "height": "1px",
            "overflow": "hidden",
            "position": "absolute",
            "width": "1px",
          }
        }
      >
        Url preview:
      </span>
      <div
        className="c6"
      >
        <div
          className="c7"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          https://example.org
        </div>
      </div>
    </div>
    <hr
      className="c8"
    />
    <div
      className="c1"
    >
      <span
        className="screen-reader-text"
        style={
          Object {
            "clip": "rect(1px, 1px, 1px, 1px)",
            "height": "1px",
            "overflow": "hidden",
            "position": "absolute",
            "width": "1px",
          }
        }
      >
        Meta description preview:
      </span>
      <div
        className="c9 c10"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      >
        <div
          className="c9 c10"
        >
          Description
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`SnippetPreview renders a SnippetPreview in the default mode 1`] = `
.c0 {
  border-bottom: 1px hidden #fff;
  border-radius: 2px;
  box-shadow: 0 1px 2px rgba(0,0,0,.2);
  font-family: Arial,Roboto-Regular,HelveticaNeue,sans-serif;
  max-width: 600px;
  box-sizing: border-box;
  font-size: 14px;
}

.c2 {
  cursor: pointer;
  position: relative;
}

.c4 {
  color: #1e0fbe;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 18px;
  line-height: 1.2;
  font-weight: normal;
  margin: 0;
  display: inline-block;
  overflow: hidden;
  max-width: 600px;
  vertical-align: top;
  text-overflow: ellipsis;
}

.c3 {
  max-width: 600px;
  vertical-align: top;
  text-overflow: ellipsis;
}

.c5 {
  display: inline-block;
  font-size: 16px;
  line-height: 1.2em;
  max-height: 2.4em;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c6 {
  display: inline-block;
  color: #006621;
  cursor: pointer;
  position: relative;
  max-width: 90%;
  white-space: nowrap;
  font-size: 14px;
}

.c7 {
  display: inline-block;
  color: #006621;
  cursor: pointer;
  position: relative;
  max-width: 90%;
  white-space: nowrap;
  font-size: 14px;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 100%;
}

.c10 {
  color: #545454;
  cursor: pointer;
  position: relative;
  max-width: 600px;
  font-size: 13px;
}

.c9 {
  font-size: 14px;
  line-height: 20px;
}

.c1 {
  padding: 8px 16px;
}

.c8 {
  border: 0;
  border-bottom: 1px solid #DFE1E5;
  margin: 0;
}

<section>
  <div
    className="c0"
    onMouseLeave={undefined}
    width={640}
  >
    <div
      className="c1"
    >
      <span
        className="screen-reader-text"
        style={
          Object {
            "clip": "rect(1px, 1px, 1px, 1px)",
            "height": "1px",
            "overflow": "hidden",
            "position": "absolute",
            "width": "1px",
          }
        }
      >
        SEO title preview:
      </span>
      <div
        className="c2"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      >
        <div
          className="c3 c4"
        >
          <span
            className="c5"
          >
            Title
          </span>
        </div>
      </div>
      <span
        className="screen-reader-text"
        style={
          Object {
            "clip": "rect(1px, 1px, 1px, 1px)",
            "height": "1px",
            "overflow": "hidden",
            "position": "absolute",
            "width": "1px",
          }
        }
      >
        Url preview:
      </span>
      <div
        className="c6"
      >
        <div
          className="c7"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          https://example.org
        </div>
      </div>
    </div>
    <hr
      className="c8"
    />
    <div
      className="c1"
    >
      <span
        className="screen-reader-text"
        style={
          Object {
            "clip": "rect(1px, 1px, 1px, 1px)",
            "height": "1px",
            "overflow": "hidden",
            "position": "absolute",
            "width": "1px",
          }
        }
      >
        Meta description preview:
      </span>
      <div
        className="c9 c10"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      >
        <div
          className="c9 c10"
        >
          Description
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`SnippetPreview renders a SnippetPreview that looks like Google 1`] = `
.c1 {
  overflow: auto;
  width: 640px;
  padding: 0 20px;
  max-width: 100%;
  box-sizing: border-box;
}

.c2 {
  width: 600px;
}

.c0 {
  background-color: white;
  font-family: arial,sans-serif;
  box-sizing: border-box;
}

.c3 {
  cursor: pointer;
  position: relative;
}

.c5 {
  color: #1e0fbe;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 18px;
  line-height: 1.2;
  font-weight: normal;
  margin: 0;
  display: inline-block;
  overflow: hidden;
  max-width: 600px;
  vertical-align: top;
  text-overflow: ellipsis;
}

.c4 {
  max-width: 600px;
  vertical-align: top;
  text-overflow: ellipsis;
}

.c6 {
  white-space: nowrap;
}

.c7 {
  display: inline-block;
  color: #006621;
  cursor: pointer;
  position: relative;
  max-width: 90%;
  white-space: nowrap;
  font-size: 14px;
}

.c8 {
  display: inline-block;
  color: #006621;
  cursor: pointer;
  position: relative;
  max-width: 90%;
  white-space: nowrap;
  font-size: 14px;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 100%;
}

.c10 {
  color: #545454;
  cursor: pointer;
  position: relative;
  max-width: 600px;
  font-size: 13px;
}

.c9 {
  display: inline-block;
  margin-top: 6px;
  margin-left: 6px;
  border-top: 5px solid #006621;
  border-right: 4px solid transparent;
  border-left: 4px solid transparent;
  vertical-align: top;
}

<section>
  <div
    className="c0 c1"
    width={640}
  >
    <div
      className="c2"
      width={600}
    >
      <div
        className=""
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          SEO title preview:
        </span>
        <div
          className="c3"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          <div
            className="c4 c5"
          >
            <span
              className="c6"
            >
              Title
            </span>
          </div>
        </div>
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Url preview:
        </span>
        <div
          className="c7"
        >
          <div
            className="c8"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          >
            https://example.org/
          </div>
        </div>
        <div
          className="c9"
        />
      </div>
      <div
        className=""
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Meta description preview:
        </span>
        <div
          className="c10"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          Description
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`SnippetPreview renders a caret on activation 1`] = `
.c1 {
  overflow: auto;
  width: 640px;
  padding: 0 20px;
  max-width: 100%;
  box-sizing: border-box;
}

.c2 {
  width: 600px;
}

.c0 {
  background-color: white;
  font-family: arial,sans-serif;
  box-sizing: border-box;
}

.c4 {
  cursor: pointer;
  position: relative;
}

.c6 {
  color: #1e0fbe;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 18px;
  line-height: 1.2;
  font-weight: normal;
  margin: 0;
  display: inline-block;
  overflow: hidden;
  max-width: 600px;
  vertical-align: top;
  text-overflow: ellipsis;
}

.c5 {
  max-width: 600px;
  vertical-align: top;
  text-overflow: ellipsis;
}

.c7 {
  white-space: nowrap;
}

.c8 {
  display: inline-block;
  color: #006621;
  cursor: pointer;
  position: relative;
  max-width: 90%;
  white-space: nowrap;
  font-size: 14px;
}

.c9 {
  display: inline-block;
  color: #006621;
  cursor: pointer;
  position: relative;
  max-width: 90%;
  white-space: nowrap;
  font-size: 14px;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 100%;
}

.c11 {
  color: #545454;
  cursor: pointer;
  position: relative;
  max-width: 600px;
  font-size: 13px;
}

.c10 {
  display: inline-block;
  margin-top: 6px;
  margin-left: 6px;
  border-top: 5px solid #006621;
  border-right: 4px solid transparent;
  border-left: 4px solid transparent;
  vertical-align: top;
}

.c3::before {
  display: block;
  position: absolute;
  top: -3px;
  left: -22px;
  width: 24px;
  height: 24px;
  background-image: url( data:image/svg+xml;charset=utf8,%3Csvg%20width%3D%221792%22%20height%3D%221792%22%20viewBox%3D%220%200%201792%201792%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20fill%3D%22%23555%22%20d%3D%22M1152%20896q0%2026-19%2045l-448%20448q-19%2019-45%2019t-45-19-19-45v-896q0-26%2019-45t45-19%2045%2019l448%20448q19%2019%2019%2045z%22%20%2F%3E%3C%2Fsvg%3E );
  background-size: 25px;
  content: "";
}

<section>
  <div
    className="c0 c1"
    width={640}
  >
    <div
      className="c2"
      width={600}
    >
      <div
        className=""
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          SEO title preview:
        </span>
        <div
          className="c3 c4"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          <div
            className="c5 c6"
          >
            <span
              className="c7"
            >
              Title
            </span>
          </div>
        </div>
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Url preview:
        </span>
        <div
          className="c8"
        >
          <div
            className="c9"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          >
            https://example.org/
          </div>
        </div>
        <div
          className="c10"
        />
      </div>
      <div
        className=""
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Meta description preview:
        </span>
        <div
          className="c11"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          Description
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`SnippetPreview renders a caret on activation 2`] = `
.c1 {
  overflow: auto;
  width: 640px;
  padding: 0 20px;
  max-width: 100%;
  box-sizing: border-box;
}

.c2 {
  width: 600px;
}

.c0 {
  background-color: white;
  font-family: arial,sans-serif;
  box-sizing: border-box;
}

.c3 {
  cursor: pointer;
  position: relative;
}

.c5 {
  color: #1e0fbe;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 18px;
  line-height: 1.2;
  font-weight: normal;
  margin: 0;
  display: inline-block;
  overflow: hidden;
  max-width: 600px;
  vertical-align: top;
  text-overflow: ellipsis;
}

.c4 {
  max-width: 600px;
  vertical-align: top;
  text-overflow: ellipsis;
}

.c6 {
  white-space: nowrap;
}

.c7 {
  display: inline-block;
  color: #006621;
  cursor: pointer;
  position: relative;
  max-width: 90%;
  white-space: nowrap;
  font-size: 14px;
}

.c8 {
  display: inline-block;
  color: #006621;
  cursor: pointer;
  position: relative;
  max-width: 90%;
  white-space: nowrap;
  font-size: 14px;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 100%;
}

.c11 {
  color: #545454;
  cursor: pointer;
  position: relative;
  max-width: 600px;
  font-size: 13px;
}

.c9 {
  display: inline-block;
  margin-top: 6px;
  margin-left: 6px;
  border-top: 5px solid #006621;
  border-right: 4px solid transparent;
  border-left: 4px solid transparent;
  vertical-align: top;
}

.c10::before {
  display: block;
  position: absolute;
  top: -3px;
  left: -22px;
  width: 24px;
  height: 24px;
  background-image: url( data:image/svg+xml;charset=utf8,%3Csvg%20width%3D%221792%22%20height%3D%221792%22%20viewBox%3D%220%200%201792%201792%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20fill%3D%22%23555%22%20d%3D%22M1152%20896q0%2026-19%2045l-448%20448q-19%2019-45%2019t-45-19-19-45v-896q0-26%2019-45t45-19%2045%2019l448%20448q19%2019%2019%2045z%22%20%2F%3E%3C%2Fsvg%3E );
  background-size: 25px;
  content: "";
}

<section>
  <div
    className="c0 c1"
    width={640}
  >
    <div
      className="c2"
      width={600}
    >
      <div
        className=""
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          SEO title preview:
        </span>
        <div
          className="c3"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          <div
            className="c4 c5"
          >
            <span
              className="c6"
            >
              Title
            </span>
          </div>
        </div>
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Url preview:
        </span>
        <div
          className="c7"
        >
          <div
            className="c8"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          >
            https://example.org/
          </div>
        </div>
        <div
          className="c9"
        />
      </div>
      <div
        className=""
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Meta description preview:
        </span>
        <div
          className="c10 c11"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          Description
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`SnippetPreview renders a caret on activation 3`] = `
.c1 {
  overflow: auto;
  width: 640px;
  padding: 0 20px;
  max-width: 100%;
  box-sizing: border-box;
}

.c2 {
  width: 600px;
}

.c0 {
  background-color: white;
  font-family: arial,sans-serif;
  box-sizing: border-box;
}

.c3 {
  cursor: pointer;
  position: relative;
}

.c5 {
  color: #1e0fbe;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 18px;
  line-height: 1.2;
  font-weight: normal;
  margin: 0;
  display: inline-block;
  overflow: hidden;
  max-width: 600px;
  vertical-align: top;
  text-overflow: ellipsis;
}

.c4 {
  max-width: 600px;
  vertical-align: top;
  text-overflow: ellipsis;
}

.c6 {
  white-space: nowrap;
}

.c8 {
  display: inline-block;
  color: #006621;
  cursor: pointer;
  position: relative;
  max-width: 90%;
  white-space: nowrap;
  font-size: 14px;
}

.c9 {
  display: inline-block;
  color: #006621;
  cursor: pointer;
  position: relative;
  max-width: 90%;
  white-space: nowrap;
  font-size: 14px;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 100%;
}

.c11 {
  color: #545454;
  cursor: pointer;
  position: relative;
  max-width: 600px;
  font-size: 13px;
}

.c10 {
  display: inline-block;
  margin-top: 6px;
  margin-left: 6px;
  border-top: 5px solid #006621;
  border-right: 4px solid transparent;
  border-left: 4px solid transparent;
  vertical-align: top;
}

.c7::before {
  display: block;
  position: absolute;
  top: -3px;
  left: -22px;
  width: 24px;
  height: 24px;
  background-image: url( data:image/svg+xml;charset=utf8,%3Csvg%20width%3D%221792%22%20height%3D%221792%22%20viewBox%3D%220%200%201792%201792%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20fill%3D%22%23555%22%20d%3D%22M1152%20896q0%2026-19%2045l-448%20448q-19%2019-45%2019t-45-19-19-45v-896q0-26%2019-45t45-19%2045%2019l448%20448q19%2019%2019%2045z%22%20%2F%3E%3C%2Fsvg%3E );
  background-size: 25px;
  content: "";
}

<section>
  <div
    className="c0 c1"
    width={640}
  >
    <div
      className="c2"
      width={600}
    >
      <div
        className=""
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          SEO title preview:
        </span>
        <div
          className="c3"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          <div
            className="c4 c5"
          >
            <span
              className="c6"
            >
              Title
            </span>
          </div>
        </div>
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Url preview:
        </span>
        <div
          className="c7 c8"
        >
          <div
            className="c9"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          >
            https://example.org/
          </div>
        </div>
        <div
          className="c10"
        />
      </div>
      <div
        className=""
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Meta description preview:
        </span>
        <div
          className="c11"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          Description
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`SnippetPreview renders a caret on hover 1`] = `
.c1 {
  overflow: auto;
  width: 640px;
  padding: 0 20px;
  max-width: 100%;
  box-sizing: border-box;
}

.c2 {
  width: 600px;
}

.c0 {
  background-color: white;
  font-family: arial,sans-serif;
  box-sizing: border-box;
}

.c4 {
  cursor: pointer;
  position: relative;
}

.c6 {
  color: #1e0fbe;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 18px;
  line-height: 1.2;
  font-weight: normal;
  margin: 0;
  display: inline-block;
  overflow: hidden;
  max-width: 600px;
  vertical-align: top;
  text-overflow: ellipsis;
}

.c5 {
  max-width: 600px;
  vertical-align: top;
  text-overflow: ellipsis;
}

.c7 {
  white-space: nowrap;
}

.c8 {
  display: inline-block;
  color: #006621;
  cursor: pointer;
  position: relative;
  max-width: 90%;
  white-space: nowrap;
  font-size: 14px;
}

.c9 {
  display: inline-block;
  color: #006621;
  cursor: pointer;
  position: relative;
  max-width: 90%;
  white-space: nowrap;
  font-size: 14px;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 100%;
}

.c11 {
  color: #545454;
  cursor: pointer;
  position: relative;
  max-width: 600px;
  font-size: 13px;
}

.c10 {
  display: inline-block;
  margin-top: 6px;
  margin-left: 6px;
  border-top: 5px solid #006621;
  border-right: 4px solid transparent;
  border-left: 4px solid transparent;
  vertical-align: top;
}

.c3::before {
  display: block;
  position: absolute;
  top: -3px;
  left: -22px;
  width: 24px;
  height: 24px;
  background-image: url( data:image/svg+xml;charset=utf8,%3Csvg%20width%3D%221792%22%20height%3D%221792%22%20viewBox%3D%220%200%201792%201792%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20fill%3D%22%23ccc%22%20d%3D%22M1152%20896q0%2026-19%2045l-448%20448q-19%2019-45%2019t-45-19-19-45v-896q0-26%2019-45t45-19%2045%2019l448%20448q19%2019%2019%2045z%22%20%2F%3E%3C%2Fsvg%3E );
  background-size: 25px;
  content: "";
}

<section>
  <div
    className="c0 c1"
    width={640}
  >
    <div
      className="c2"
      width={600}
    >
      <div
        className=""
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          SEO title preview:
        </span>
        <div
          className="c3 c4"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          <div
            className="c5 c6"
          >
            <span
              className="c7"
            >
              Title
            </span>
          </div>
        </div>
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Url preview:
        </span>
        <div
          className="c8"
        >
          <div
            className="c9"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          >
            https://example.org/
          </div>
        </div>
        <div
          className="c10"
        />
      </div>
      <div
        className=""
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Meta description preview:
        </span>
        <div
          className="c11"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          Description
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`SnippetPreview renders a caret on hover 2`] = `
.c1 {
  overflow: auto;
  width: 640px;
  padding: 0 20px;
  max-width: 100%;
  box-sizing: border-box;
}

.c2 {
  width: 600px;
}

.c0 {
  background-color: white;
  font-family: arial,sans-serif;
  box-sizing: border-box;
}

.c3 {
  cursor: pointer;
  position: relative;
}

.c5 {
  color: #1e0fbe;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 18px;
  line-height: 1.2;
  font-weight: normal;
  margin: 0;
  display: inline-block;
  overflow: hidden;
  max-width: 600px;
  vertical-align: top;
  text-overflow: ellipsis;
}

.c4 {
  max-width: 600px;
  vertical-align: top;
  text-overflow: ellipsis;
}

.c6 {
  white-space: nowrap;
}

.c7 {
  display: inline-block;
  color: #006621;
  cursor: pointer;
  position: relative;
  max-width: 90%;
  white-space: nowrap;
  font-size: 14px;
}

.c8 {
  display: inline-block;
  color: #006621;
  cursor: pointer;
  position: relative;
  max-width: 90%;
  white-space: nowrap;
  font-size: 14px;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 100%;
}

.c11 {
  color: #545454;
  cursor: pointer;
  position: relative;
  max-width: 600px;
  font-size: 13px;
}

.c9 {
  display: inline-block;
  margin-top: 6px;
  margin-left: 6px;
  border-top: 5px solid #006621;
  border-right: 4px solid transparent;
  border-left: 4px solid transparent;
  vertical-align: top;
}

.c10::before {
  display: block;
  position: absolute;
  top: -3px;
  left: -22px;
  width: 24px;
  height: 24px;
  background-image: url( data:image/svg+xml;charset=utf8,%3Csvg%20width%3D%221792%22%20height%3D%221792%22%20viewBox%3D%220%200%201792%201792%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20fill%3D%22%23ccc%22%20d%3D%22M1152%20896q0%2026-19%2045l-448%20448q-19%2019-45%2019t-45-19-19-45v-896q0-26%2019-45t45-19%2045%2019l448%20448q19%2019%2019%2045z%22%20%2F%3E%3C%2Fsvg%3E );
  background-size: 25px;
  content: "";
}

<section>
  <div
    className="c0 c1"
    width={640}
  >
    <div
      className="c2"
      width={600}
    >
      <div
        className=""
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          SEO title preview:
        </span>
        <div
          className="c3"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          <div
            className="c4 c5"
          >
            <span
              className="c6"
            >
              Title
            </span>
          </div>
        </div>
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Url preview:
        </span>
        <div
          className="c7"
        >
          <div
            className="c8"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          >
            https://example.org/
          </div>
        </div>
        <div
          className="c9"
        />
      </div>
      <div
        className=""
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Meta description preview:
        </span>
        <div
          className="c10 c11"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          Description
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`SnippetPreview renders a caret on hover 3`] = `
.c1 {
  overflow: auto;
  width: 640px;
  padding: 0 20px;
  max-width: 100%;
  box-sizing: border-box;
}

.c2 {
  width: 600px;
}

.c0 {
  background-color: white;
  font-family: arial,sans-serif;
  box-sizing: border-box;
}

.c3 {
  cursor: pointer;
  position: relative;
}

.c5 {
  color: #1e0fbe;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 18px;
  line-height: 1.2;
  font-weight: normal;
  margin: 0;
  display: inline-block;
  overflow: hidden;
  max-width: 600px;
  vertical-align: top;
  text-overflow: ellipsis;
}

.c4 {
  max-width: 600px;
  vertical-align: top;
  text-overflow: ellipsis;
}

.c6 {
  white-space: nowrap;
}

.c8 {
  display: inline-block;
  color: #006621;
  cursor: pointer;
  position: relative;
  max-width: 90%;
  white-space: nowrap;
  font-size: 14px;
}

.c9 {
  display: inline-block;
  color: #006621;
  cursor: pointer;
  position: relative;
  max-width: 90%;
  white-space: nowrap;
  font-size: 14px;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 100%;
}

.c11 {
  color: #545454;
  cursor: pointer;
  position: relative;
  max-width: 600px;
  font-size: 13px;
}

.c10 {
  display: inline-block;
  margin-top: 6px;
  margin-left: 6px;
  border-top: 5px solid #006621;
  border-right: 4px solid transparent;
  border-left: 4px solid transparent;
  vertical-align: top;
}

.c7::before {
  display: block;
  position: absolute;
  top: -3px;
  left: -22px;
  width: 24px;
  height: 24px;
  background-image: url( data:image/svg+xml;charset=utf8,%3Csvg%20width%3D%221792%22%20height%3D%221792%22%20viewBox%3D%220%200%201792%201792%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20fill%3D%22%23ccc%22%20d%3D%22M1152%20896q0%2026-19%2045l-448%20448q-19%2019-45%2019t-45-19-19-45v-896q0-26%2019-45t45-19%2045%2019l448%20448q19%2019%2019%2045z%22%20%2F%3E%3C%2Fsvg%3E );
  background-size: 25px;
  content: "";
}

<section>
  <div
    className="c0 c1"
    width={640}
  >
    <div
      className="c2"
      width={600}
    >
      <div
        className=""
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          SEO title preview:
        </span>
        <div
          className="c3"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          <div
            className="c4 c5"
          >
            <span
              className="c6"
            >
              Title
            </span>
          </div>
        </div>
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Url preview:
        </span>
        <div
          className="c7 c8"
        >
          <div
            className="c9"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          >
            https://example.org/
          </div>
        </div>
        <div
          className="c10"
        />
      </div>
      <div
        className=""
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Meta description preview:
        </span>
        <div
          className="c11"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          Description
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`SnippetPreview shows the date if a date is passed 1`] = `
.c1 {
  overflow: auto;
  width: 640px;
  padding: 0 20px;
  max-width: 100%;
  box-sizing: border-box;
}

.c2 {
  width: 600px;
}

.c0 {
  background-color: white;
  font-family: arial,sans-serif;
  box-sizing: border-box;
}

.c3 {
  cursor: pointer;
  position: relative;
}

.c5 {
  color: #1e0fbe;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 18px;
  line-height: 1.2;
  font-weight: normal;
  margin: 0;
  display: inline-block;
  overflow: hidden;
  max-width: 600px;
  vertical-align: top;
  text-overflow: ellipsis;
}

.c4 {
  max-width: 600px;
  vertical-align: top;
  text-overflow: ellipsis;
}

.c6 {
  white-space: nowrap;
}

.c7 {
  display: inline-block;
  color: #006621;
  cursor: pointer;
  position: relative;
  max-width: 90%;
  white-space: nowrap;
  font-size: 14px;
}

.c8 {
  display: inline-block;
  color: #006621;
  cursor: pointer;
  position: relative;
  max-width: 90%;
  white-space: nowrap;
  font-size: 14px;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 100%;
}

.c10 {
  color: #545454;
  cursor: pointer;
  position: relative;
  max-width: 600px;
  font-size: 13px;
}

.c9 {
  display: inline-block;
  margin-top: 6px;
  margin-left: 6px;
  border-top: 5px solid #006621;
  border-right: 4px solid transparent;
  border-left: 4px solid transparent;
  vertical-align: top;
}

.c11 {
  color: #808080;
}

<section>
  <div
    className="c0 c1"
    width={640}
  >
    <div
      className="c2"
      width={600}
    >
      <div
        className=""
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          SEO title preview:
        </span>
        <div
          className="c3"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          <div
            className="c4 c5"
          >
            <span
              className="c6"
            >
              Title
            </span>
          </div>
        </div>
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Url preview:
        </span>
        <div
          className="c7"
        >
          <div
            className="c8"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          >
            https://example.org/
          </div>
        </div>
        <div
          className="c9"
        />
      </div>
      <div
        className=""
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Meta description preview:
        </span>
        <div
          className="c10"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          <span
            className="c11"
          >
            Today
             - 
          </span>
          Description
        </div>
      </div>
    </div>
  </div>
</section>
`;
